--- a/html/login-page.html
+++ b/html/login-page.html
@@ -78,7 +78,7 @@
             </div>
         </main>
         <footer class="footer">
-            <div class="contain">
+            <div class="contain  clearFix">
                 <div class="slogan">
                     <p>
                         易教练和IT修真院联手送你<big>3000元大礼包</big>,<br>
