--- a/html/login-page.html
+++ b/html/login-page.html
@@ -34,7 +34,7 @@
         </header>
         <main class="main">
             <div class="summary clearFix">
-                <div class="pic"><img src="../imgs/main-pic.jpg" class="picture"></div>
+                <div class="pic"></div>
                 <div class="content">
                     <ul class="items">
                         <li class="item">
