--- a/html/login-page.html
+++ b/html/login-page.html
@@ -15,16 +15,17 @@
     <div class="shade">
         <div class="shade-background" onclick="cancel()"></div>
         <div class="register">
-            <div class="phone-num">手机号</div>
-            <input type="text" class="reg-text" placeholder="请输入手机号"><br>
-            <div class="sms-code">验证码</div>
-            <input type="text" class="reg-text" placeholder="请输入验证码"><button class="get-code">获取验证码</button><br>
-            <div class="password">密码</div>
-            <input type="text" class="reg-text" placeholder="请输入密码"><br>
-            <div class="invitation-code">邀请码</div>
-            <input type="text" class="reg-text" value="31419511" readonly><br>
-            <button class="reg">注册</button>
-
+            <form>
+                <div class="phone-num">手机号</div>
+                <input type="text" class="reg-text" pattern="[0-9]{11}" placeholder="请输入手机号" maxlength="11" required><br>
+                <div class="sms-code">验证码</div>
+                <input type="text" class="reg-text" pattern="[A-z0-9]{6}" placeholder="请输入验证码" maxlength="6" required><input class="get-code" value="获取验证码" onclick="settime(this)"><br>
+                <div class="password">密码</div>
+                <input type="text" class="reg-text" pattern="[\S]{6,18}" placeholder="请输入密码" minlength="6" max="18" required><br>
+                <div class="invitation-code">邀请码</div>
+                <input type="text" class="reg-text" value="31419511" readonly><br>
+                <button class="reg" type="submit">注册</button>
+            </form>
         </div>
     </div>
     <div class="wrapper">
