--- a/html/login-page.html
+++ b/html/login-page.html
@@ -19,7 +19,7 @@
                 <div class="phone-num">手机号</div>
                 <input type="text" class="reg-text" pattern="[0-9]{11}" placeholder="请输入手机号" maxlength="11" required><br>
                 <div class="sms-code">验证码</div>
-                <input type="text" class="reg-text" pattern="[A-z0-9]{6}" placeholder="请输入验证码" maxlength="6" required><input class="get-code" value="获取验证码" onclick="settime(this)"><br>
+                <input type="text" class="reg-text" pattern="[A-z0-9]{6}" placeholder="请输入验证码" maxlength="6" required><input class="get-code" value="获取验证码" onclick="settime(this)" readonly><br>
                 <div class="password">密码</div>
                 <input type="text" class="reg-text" pattern="[\S]{6,18}" placeholder="请输入密码" minlength="6" max="18" required><br>
                 <div class="invitation-code">邀请码</div>
