--- a/html/login-page.html
+++ b/html/login-page.html
@@ -58,7 +58,7 @@
                             <p class="item-text">独创课堂体系，IT修真院达到99%的就业率，毕业师兄真是可查。九大职业可选，IT修真院职业规划师免费为你做职业规划，选出最适合自己的职业</p>
                         </li>
                     </ul>
-                    <button id="more">了解更多</button>
+                    <button id="more" onclick="obtain()">了解更多</button>
                 </div>
             </div>
             <div class="reason">
