--- a/html/login-page.html
+++ b/html/login-page.html
@@ -17,15 +17,15 @@
         <div class="register">
             <form>
                 <div class="phone-num">手机号</div>
-                <input type="text" class="reg-text" pattern="\d{11}" placeholder="请输入手机号" maxlength="11" title="" required oninvalid="setCustomValidity('请输入正确的手机号');" oninput="setCustomValidity('');"><br>
+                <input type="text" class="reg-text" pattern="^\d{11}$" placeholder="请输入手机号" maxlength="11" title="" required oninvalid="setCustomValidity('请输入正确的手机号');" oninput="setCustomValidity('');"><br>
                 <div class="sms-code">验证码</div>
-                <input type="text" class="reg-text" pattern="\d{6}" placeholder="请输入验证码" maxlength="6" required oninvalid="setCustomValidity('验证码错误');" oninput="setCustomValidity('');"><input class="get-code" value="获取验证码" onclick="settime(this)" readonly><br>
+                <input type="text" class="reg-text" pattern="^\d{6}$" placeholder="请输入验证码" maxlength="6" required oninvalid="setCustomValidity('验证码错误');" oninput="setCustomValidity('');"><input class="get-code" value="获取验证码" onclick="settime(this)" readonly><br>
                 <div class="password">密码</div>
-                <input type="password" class="reg-text" pattern="\S{6,18}" placeholder="请输入密码" minlength="6" maxlength="18" required oninvalid="setCustomValidity('请输入6~18位的密码');" oninput="setCustomValidity('');" autocomplete="tel"><br>
+                <input type="password" class="reg-text" pattern="^\S{6,18}$" placeholder="请输入密码" minlength="6" maxlength="18" required oninvalid="setCustomValidity('请输入6~18位的密码');" oninput="setCustomValidity('');" autocomplete="tel"><br>
                 <div class="invitation-code">邀请码</div>
                 <input type="text" class="reg-text" value="31419511" readonly disabled><br>
-                <p id="errorTip">Warning!</p>
-                <button class="reg" type="submit" disabled>注册</button>
+                <p id="errorTip"></p>
+                <button class="reg" type="submit" onclick="register()" disabled>注册</button>
             </form>
         </div>
     </div>
