--- a/html/login-page.html
+++ b/html/login-page.html
@@ -13,15 +13,16 @@
 </head>
 <body>
     <div class="shade">
-        <div class="shade-background" onclick="cancel()"></div>
+        <div class="shade-background"></div>
         <div class="register">
-            <form>
+            <button class="btn btn-default" id="close"><big>×</big></button>
+            <form method="post" action="#">
                 <div class="phone-num">手机号</div>
-                <input type="text" class="reg-text" pattern="^\d{11}$" placeholder="请输入手机号" maxlength="11" title="" required oninvalid="setCustomValidity('请输入正确的手机号');" oninput="setCustomValidity('');"><br>
+                <input type="text" id="telNo" class="reg-text" placeholder="请输入手机号" maxlength="11" required ><br>
                 <div class="sms-code">验证码</div>
-                <input type="text" class="reg-text" pattern="^\d{6}$" placeholder="请输入验证码" maxlength="6" required oninvalid="setCustomValidity('验证码错误');" oninput="setCustomValidity('');"><input class="get-code" value="获取验证码" onclick="settime(this)" readonly><br>
+                <input type="text" id="smsCode" class="reg-text" pattern="^\d{6}$" placeholder="请输入验证码" maxlength="6" required><input class="get-code" value="获取验证码" onclick="settime(this)" readonly><br>
                 <div class="password">密码</div>
-                <input type="password" class="reg-text" pattern="^\S{6,18}$" placeholder="请输入密码" minlength="6" maxlength="18" required oninvalid="setCustomValidity('请输入6~18位的密码');" oninput="setCustomValidity('');" autocomplete="tel"><br>
+                <input type="password" id="pwd" class="reg-text" pattern="^\S{6,18}$" placeholder="请输入密码（字母开头，6~18位）" minlength="6" maxlength="18" required autocomplete="tel"><br>
                 <div class="invitation-code">邀请码</div>
                 <input type="text" class="reg-text" value="31419511" readonly disabled><br>
                 <p id="errorTip"></p>
