--- a/html/login-page.html
+++ b/html/login-page.html
@@ -69,13 +69,13 @@
                 <p class="reason-subtitle">纸上得来终觉浅，绝知此事要躬行</p>
                 <div class="messages clearFix">
                     <div class="msg">
-                        <p> IT修真院独有任务体系， 师兄带师弟辅导，高标 准要求，通过复盘、实 战的淬炼，打造IT精英 团队</p>
+                        <p> IT修真院独有任务体系， 师兄带师弟辅导，高标&emsp;准要求，通过复盘、实&emsp;战的淬炼，打造IT精英&emsp;团队</p>
                     </div>
                     <div class="msg">
                         <p>线上免费在线辅导，<br>线下七天免费试学</p>
                     </div>
                     <div class="msg">
-                        <p>百度、搜狐、京东等百 位行业精英为IT修真院 代言</p>
+                        <p>百度、搜狐、京东等百&emsp;位行业精英为IT修真院&emsp;代言</p>
                     </div>
                 </div>
             </div>
