--- a/html/login-page.html
+++ b/html/login-page.html
@@ -69,7 +69,7 @@
                 <p class="reason-subtitle">纸上得来终觉浅，绝知此事要躬行</p>
                 <div class="messages clearFix">
                     <div class="msg">
-                        <p> IT修真院独有任务体系， 师兄带师弟辅导，高标 <br>准要求，通过复盘、实 <br>战的淬炼，打造IT精英 <br>团队</p>
+                        <p> IT修真院独有任务体系， <br>师兄带师弟辅导，高标 <br>准要求，通过复盘、实 <br>战的淬炼，打造IT精英 <br>团队</p>
                     </div>
                     <div class="msg">
                         <p>线上免费在线辅导，<br>线下七天免费试学</p>
