--- a/html/login-page.html
+++ b/html/login-page.html
@@ -45,7 +45,7 @@
                         </li>
                         <li class="item">
                             <p class="item-text">英语底子薄，不是计算机专业，自认“小白”？</p>
-                            <p class="item-text">只要你肯学，统统不是问题，一对一辅导，为你保驾护航！</p>
+                            <p class="item-text">只要你肯学，统统不是问题，一对一教辅，为你保驾护航！</p>
                         </li>
                         <li class="item">
                             <p class="point">低学费</p>
